Fixed element sizes to avoid overflowing.

--- a/style.css
+++ b/style.css
@@ -65,7 +65,8 @@ nav a {
 nav a:hover {
     font-family: Helvetica, sans-serif;
     font-size: 1.2em;
-    line-height: 1.3em color: #766e60;
+    line-height: 1.3em;
+    color: #766e60;
     transition: 1s;
     cursor: pointer;
     text-decoration: none;
@@ -76,7 +77,7 @@ nav a:hover {
 .main-content {
     display: flex;
     margin: 2% 3% 3% 3%;
-    padding: 15px;
+    padding: 0;
     background-color: #f2ede4;
     justify-content: space-between;
     border: 1px solid black;
@@ -86,25 +87,29 @@ nav a:hover {
 
 
 .text-box {
+    background-color: #f2ede4;
     display: block;
     width: 60%;
-    padding: 10%;
+    height: 100%;
+    padding: 3% 10% 5% 10%;
     letter-spacing: 0.05em;
     line-height: 1.5;
     min-width: 45ch;
     max-width: 85ch;
+
 }
 
 .portrait-box {
     display: flex;
     padding: 0;
     margin: 0;
+    width: 40%;
 }
 
 .portrait {
-    width: auto;
+    width: 100%;
     height: 600px;
-
+    object-fit: cover;
 }
 
 footer {
